# SFML-FlappyBird

./: CMakeLists.txt  README.md
Assets/Fonts/: OFL.txt
src/: Pipe.cpp  Pipe.h  PipeManager.cpp  PipeManager.h  Player.cpp  Player.h  main.cpp
